Add version to path
